<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Course Statistics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_add_text">Add course</string>
    <string name="dialog_title_message">Enter course name</string>
    <string name="dialog_positive_button">Create</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="button_add_assignment">Add assignment</string>
    <string name="achieved_points_text">Achieved points:</string>
    <string name="max_points_text">Max. points:</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="course_name_textview">Name:</string>
    <string name="max_points_textview">Max. points per assignment:</string>
    <string name="edit_course_text">Edit course</string>
    <string name="title_activity_edit_course">Edit course</string>
    <string name="text_extra_assignment_checkbox">This is an extra assignment</string>
    <string name="course_overview_overall_textview">Overall</string>
    <string name="course_overview_necessary_text">Necessary points/assignment</string>
    <string name="course_overview_assignments_until_finished_textview">No. assignments until 50%</string>
    <string name="course_overview_average_textview">Average</string>
    <string name="assignment_number">"Assignment nr. "</string>
    <string name="new_assignment">New assignment</string>
    <string name="enter_assignment_points">Enter assignment points</string>
    <string name="add">Add</string>
    <string name="invalid_values">Invalid values</string>
    <string name="cancel">Cancel</string>
    <string name="new_assignment_added">New assignment added</string>
    <string name="delete">Delete</string>
    <string name="want_delete_assignment">Do you want to delete assignment Nr.</string>
    <string name="deleted">" deleted"</string>
    <string name="new_course">New course</string>
    <string name="enter_course_name_and_max_p_p_a">Enter course name and max. points per assignment</string>
    <string name="a_course_same_name">A course with the same name already exists</string>
    <string name="course">"Course: "</string>
    <string name="has_been_added">" has been added"</string>
    <string name="abort_no_title">Abort: No title set</string>
    <string name="do_you_want_to_delete">"Do you want to delete "</string>
    <string name="confirm">Confirm</string>
    <string name="restore_complete">Restore complete</string>
    <string name="backup_complete">Backup complete</string>
    <string name="backup_to_storage">Do you want to backup data to storage?</string>
    <string name="name">Name</string>
    <string name="points_per_assignment">Points per assignment</string>
    <string name="number_of_assignments">Number of assignments</string>
    <string name="save">Save</string>
    <string name="reached_assignments_limit">You have reached your assignments limit for this course!</string>
    <string name="number_assignments_too_low">New number of assignments lower than current number of assignments</string>
    <string name="edit_assignment">Edit</string>
    <string name="dialog_edit_assignment_save">Save</string>
    <string name="dialog_edit_assignment_title">Edit assignment</string>
    <string name="yes">yes</string>
    <string name="courselist_head_coursename">Coursename</string>
    <string name="courselist_header_progress">Progress</string>
    <string name="courselist_header_average">\u00d8</string>
    <string name="checkbox_text_hasfixedpoints">This course always has the same number of max. points for each assignment</string>
    <string name="undo">Undo</string>
    <string name="do_you_want_restore">Choose a backup</string>
    <string name="nec_percent_to_pass">Necessary percent to pass</string>
    <string name="course_has_max_number_of_assignments">Your course already has reached the max. number of assignments</string>
    <string name="no_assignments_added_yet_chart">No assignments added yet</string>

</resources>
