<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_add_course"
        android:onClick="onClickAddCourse"
        android:showAsAction="always"
        android:title="@string/button_add_text" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item android:id="@+id/backup"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/backup"
        android:onClick="onClickMenuBackup"/>
    <item android:id="@+id/restore"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/restore"
        android:onClick="onClickMenuRestore"/>
</menu>
