<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/red_400"
    android:orientation="horizontal"
    android:elevation="4dp"
    android:layout_marginBottom="3dp">

    <TextView
        android:id="@+id/course_letter"
        android:layout_width="44dp"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:text="@string/courselist_header_average"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey_white_1000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="22dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/course_textview_name"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/courselist_head_coursename"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_white_1000"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/end_percentage_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="16dp"
        android:gravity="end"
        android:text="@string/courselist_header_progress"
        android:textColor="@color/grey_white_1000"
        android:textSize="20sp"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        />
</LinearLayout>